--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grid Template for Bootstrap</title>
+    <title>Coco</title>
     
        <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -31,7 +31,7 @@
         <ul id="nav">
             <li id="nav-one"><span>Home &amp; Studio Recordings</span></li>
             <li id="nav-two"><h1>Coco</h1></li>
-            <li id="nav-three"><a>Contact</a></li>
+            <li id="nav-three"><a href="mailto:youngriprip@gmail.com">Contact</a></li>
         </ul>
       </div>
 
